// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms/KarutaPlayingResult all correct 1`] = `
<div
  className="makeStyles-root-728"
>
  <div
    className="makeStyles-summaryContainer-729 makeStyles-summaryCorrectCount-730"
  >
    <div
      className="makeStyles-root-740 makeStyles-root-741 makeStyles-summaryLabel-732"
    >
      正解数
    </div>
    <span
      className="makeStyles-root-740 makeStyles-root-742 "
    >
      100 / 100
    </span>
  </div>
  <div
    className="makeStyles-summaryContainer-729 makeStyles-summaryAverage-731"
  >
    <div
      className="makeStyles-root-740 makeStyles-root-743 makeStyles-summaryLabel-732"
    >
      平均回答時間
    </div>
    <span
      className="makeStyles-root-740 makeStyles-root-744 "
    >
      5.8秒
    </span>
  </div>
  <div
    className="makeStyles-comaContainer-736"
  >
    <div
      className="makeStyles-cheerMessageContainer-737"
    >
      <span
        className="makeStyles-root-740 makeStyles-root-745 makeStyles-cheerMessage-738"
      >
        当サイトは百人一首とちはやふるを応援しています
      </span>
    </div>
    <div
      className="makeStyles-cheerMessageContainer-737"
    >
      <a
        href="https://chihayafund.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        ちはやふる基金
      </a>
    </div>
  </div>
  <div
    className="makeStyles-shareButtonsWrapper-733"
  >
    <a
      className="twitter-share-button"
      data-hashtags={
        Array [
          "百人一首",
        ]
      }
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 100問中 100問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <div
    className="makeStyles-buttonsWrapper-734"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-735"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-default-746 makeStyles-default-748"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
        メニューに戻る
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots organisms/KarutaPlayingResult has mistake 1`] = `
<div
  className="makeStyles-root-750"
>
  <div
    className="makeStyles-summaryContainer-751 makeStyles-summaryCorrectCount-752"
  >
    <div
      className="makeStyles-root-762 makeStyles-root-763 makeStyles-summaryLabel-754"
    >
      正解数
    </div>
    <span
      className="makeStyles-root-762 makeStyles-root-764 "
    >
      80 / 100
    </span>
  </div>
  <div
    className="makeStyles-summaryContainer-751 makeStyles-summaryAverage-753"
  >
    <div
      className="makeStyles-root-762 makeStyles-root-765 makeStyles-summaryLabel-754"
    >
      平均回答時間
    </div>
    <span
      className="makeStyles-root-762 makeStyles-root-766 "
    >
      5.8秒
    </span>
  </div>
  <div
    className="makeStyles-comaContainer-758"
  >
    <div
      className="makeStyles-cheerMessageContainer-759"
    >
      <span
        className="makeStyles-root-762 makeStyles-root-767 makeStyles-cheerMessage-760"
      >
        当サイトは百人一首とちはやふるを応援しています
      </span>
    </div>
    <div
      className="makeStyles-cheerMessageContainer-759"
    >
      <a
        href="https://chihayafund.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        ちはやふる基金
      </a>
    </div>
  </div>
  <div
    className="makeStyles-shareButtonsWrapper-755"
  >
    <a
      className="twitter-share-button"
      data-hashtags={
        Array [
          "百人一首",
        ]
      }
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 100問中 80問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <div
    className="makeStyles-buttonsWrapper-756"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-757"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-default-768 makeStyles-default-770"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
        </svg>
        間違えた歌の練習をする
      </span>
    </button>
  </div>
  <div
    className="makeStyles-buttonsWrapper-756"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-757"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-default-768 makeStyles-default-772"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
        メニューに戻る
      </span>
    </button>
  </div>
</div>
`;
